Quote boolean to work on older pipelines version (Operate First)

--- a/managed-server-application.yaml
+++ b/managed-server-application.yaml
@@ -50,7 +50,7 @@ spec:
 #        - name: subdirectory
 #          value: "source"
         - name: deleteExisting
-          value: true
+          value: "true"
         - name: revision
           value: $(params.git-revision)
 
